02-orchestration/04-deployment/05-ingress/ingress.yml
apiVersion: v1
kind: Namespace
metadata:
  name: learn-aks
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic-deployment
  labels:
    app: basic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic-app
  template:
    metadata:
      labels:
        app: basic-app
    spec:
      containers:
      - name: basic-app
        image: appsvcsample/python-helloworld
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: basic-service
spec:
  selector:
    app: basic-app
  ports:
    - port: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /helloworld
          backend:
            serviceName: basic-service
            servicePort: 80
